[package]
name = "multiplayer-tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.0"
actix-web-lab = "0.18.9"
env_logger = "0.10.0"
log = "0.4.17"
nanoid = "0.4.0"
rand = "0.8.5"
serde = { version= "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio-stream = { version = "0.1.8", features = ["time"] }
